# AegisOTA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  README.md  README.sync-conflict-20260428-235858-TMKQGDX.md  agent.md  pyproject.toml
app/: __init__.py  config.py  database.py  database.sync-conflict-20260428-235900-TMKQGDX.py  exceptions.py  main.py  main.sync-conflict-20260428-235901-TMKQGDX.py
app/api/: devices.py  diagnosis.py  diagnosis.sync-conflict-20260428-235903-TMKQGDX.py  pools.py  reports.py  runs.py  schemas.py  settings.py  web.py
app/cli/: device.py  main.py  pool.py  report.py  run.py  seed.py  worker.py
app/diagnosis/: __init__.py  confidence.py  engine.py  loader.py  similar.py
app/executors/: __init__.py  adb_executor.py  command_runner.py  command_runner.sync-conflict-20260429-005806-QL5WZYT.py  mock_executor.py  run_context.py  run_context.sync-conflict-20260429-005758-QL5WZYT.py  run_executor.py  run_executor.sync-conflict-20260428-235855-TMKQGDX.py  step_handlers.py
app/faults/: __init__.py  base.py  download_interrupted.py  low_battery.py  monkey_after_upgrade.py  package_corrupted.py  performance_regression.py  post_boot_watchdog_failure.py  reboot_interrupted.py  storage_pressure.py
app/middleware/: __init__.py  (+1 more)
docs/: API.md  CODE_REVIEW_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  PLAN.md  PLAN_detail.md  architecture.md  interview_qna_aegisota.md
migrations/: env.py
scripts/: add_virtual_devices.py  test_ui.py
tests/: conftest.py
(+135 files in other folders)
